--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/netlify": "^6.5.7",
     "@astrojs/sitemap": "^3.5.0",
+    "@iconify-json/mdi": "^1.2.3",
+    "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "@types/alpinejs": "^3.13.11",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
     "alpinejs": "^3.14.9",
     "astro": "^5.13.2",
     "astro-expressive-code": "^0.41.3",
@@ -28,6 +32,8 @@
     "mdast-util-directive": "^3.1.0",
     "mdast-util-to-markdown": "^2.1.2",
     "mdast-util-to-string": "^4.0.0",
+    "pagefind": "^1.3.0",
+    "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-unwrap-images": "^1.0.0",
