--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/markdown-remark": "^6.3.6",
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/netlify": "^6.5.7",
+    "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.0",
     "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/vite": "^4.1.11",
