--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -376,5 +376,6 @@
     "astro",  // Enable .astro
     "typescript",  // Enable .ts
     "typescriptreact"  // Enable .tsx
-  ]
+  ],
+  "DockerRun.DisableDockerrc": true
 }
